--- a/Geoinformatique_I/IP/Exercices_IP/S2_IP_exercice.ipynb
+++ b/Geoinformatique_I/IP/Exercices_IP/S2_IP_exercice.ipynb
@@ -39,28 +39,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "id": "wkrwV1yvjW3-",
-        "outputId": "c83e929a-557b-4132-e61d-ab7bf8f96270",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "wkrwV1yvjW3-"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Impaire\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Ecrivez votre code ici\n",
-        "nombre = 10 #Entrez un nombre entier\n",
+        "nombre = ____ #Entrez un nombre entier\n",
         "\n",
-        "if 10 % 2 == 5:\n",
+        "if ____ % 2 == __ :\n",
         "    print(\"Pair\")\n",
         "else:\n",
         "    print(\"Impaire\")"
@@ -77,30 +65,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "id": "SkjaBcb-jW3_",
-        "outputId": "674689d6-532b-4923-b25d-c2325366bbc3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "SkjaBcb-jW3_"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Le deuxième nombre est plus grand.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "nombre1 = 1.5 #Entrez un chiffre à virgule\n",
-        "nombre2 = 2.5 #Entrez un deuxième chiffre à virgule\n",
+        "nombre1 = ____ #Entrez un chiffre à virgule\n",
+        "nombre2 = ____ #Entrez un deuxième chiffre à virgule\n",
         "\n",
-        "if 1.5>2.5 :\n",
+        "if _____ > _____:\n",
         "    print(\"Le premier nombre est plus grand.\")\n",
-        "elif 2.5 > 1.5:\n",
+        "elif _____ > _____:\n",
         "    print(\"Le deuxième nombre est plus grand.\")\n",
         "else:\n",
         "    print(\"Les deux nombres sont égaux\")"
@@ -117,30 +93,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
-        "id": "h1AnFjiKjW4A",
-        "outputId": "d1f0df39-dc6d-4378-cb91-63b846ace7ff",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "h1AnFjiKjW4A"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Adolescent\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "age = 17 # Entrez un nombre entier\n",
-        "if 17 < 12:\n",
+        "age = ____ # Entrez un nombre entier\n",
+        "if ____ < 12:\n",
         "    print(\"Enfant\")\n",
-        "elif 12 <= 17 < 18:\n",
+        "elif 12 <= ____ < 18:\n",
         "    print(\"Adolescent\")\n",
-        "elif 18 <= 17 < 65:\n",
+        "elif 18 <= ____ < 65:\n",
         "    print(\"Adulte\")\n",
         "else:\n",
         "    print(\"Senior\")\n"
@@ -166,22 +130,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "id": "ploHyFu2jW4A"
+        "id": "ploHyFu2jW4A",
+        "outputId": "7eeccfc3-67e8-4da4-872e-04a94183dc51",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "9.5\n",
+            "10\n",
+            "8\n",
+            "7.5\n"
+          ]
+        }
+      ],
       "source": [
         "# Ecrivez votre code ici\n",
         "PlayListRating = [10, 9.5, 10, 8, 7.5, 5, 10, 10]\n",
         "\n",
         "# Astuce : Utilisez l'indexation de la liste comme critère (longueur de votre liste)\n",
         "indx = 0\n",
-        "while indx<len(PlayListRating):8\n",
+        "while indx<len(PlayListRating):\n",
         "  if PlayListRating[indx]<6:\n",
-        "    pass\n",
+        "    break\n",
         "  else:\n",
-        "    print([PlayListRating])\n",
+        "    print(PlayListRating[indx])\n",
         "  indx+=1"
       ]
     },
@@ -196,17 +176,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "CIgtC_4zjW4A"
+        "id": "CIgtC_4zjW4A",
+        "outputId": "f431e4f2-4f15-4c2e-c8e3-ee5a9174c67a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "9.5\n",
+            "10\n",
+            "8\n",
+            "7.5\n"
+          ]
+        }
+      ],
       "source": [
-        "for indx in range(len(PlayListRating)):8\n",
-        "  if PlayListRanting[index]<6:\n",
-        "    continue\n",
+        "for i in range(len(PlayListRating)):\n",
+        "  if PlayListRating[i]<6:\n",
+        "    break\n",
         "  else:\n",
-        "    print(PlayListRating[inx])"
+        "    print(PlayListRating[i])"
       ]
     },
     {
@@ -220,15 +216,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "kh8TmInPjW4B"
+        "id": "kh8TmInPjW4B",
+        "outputId": "50c12565-a268-46df-ec50-3e3c63d181b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['rouge', 'jaune', 'vert', 'violet', 'bleu']\n"
+          ]
+        }
+      ],
       "source": [
-        "carres = ['rouge', 'jaune', 'vert', 'violet', 'bleu'] # An empty list\n",
-        "for index ,couleur in enumerate(['rouge', 'jaune', 'vert', 'violet', 'bleu']):\n",
-        "  carres.append(couleur) # Here you add (append) the elements one by one to the empty list\n",
+        "carres = [] # An empty list\n",
+        "for i, color in enumerate(['rouge', 'jaune', 'vert', 'violet', 'bleu']):\n",
+        "  carres.append(color) # Here you add (append) the elements one by one to the empty list\n",
         "\n",
         "print(carres)"
       ]
